# amoni

./: .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: build_docker.yaml
amoni/: __init__.py  api.py  cli.py  stubs.py
amoni/cli/: __init__.py  amoni.py  app.py  commands.py  echo.py  install.py  table.py  theme.py
docker/app_server/: Dockerfile  requirements.txt
docker/test_runner/: Dockerfile  pyproject.toml  requirements.txt
docs/: conf.py  getting_started.rst  index.rst  installation.rst  reference.rst
docs/howto/: add_dependencies.rst  change_app.rst  configure_ports.rst  configure_ssh.rst  index.rst  install_server_packages.rst  use_autocompletion.rst
docs/reference/: api.rst  index.rst
